[tool.poetry]
name = "online-store-oop"
version = "0.1.0"
description = ""
authors = ["Viktor84-code <viktor84.code@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
flake8 = "^7.3.0"
mypy = "^1.19.1"
black = "^26.1.0"
isort = "^8.0.1"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
